--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gulp": "^4.0.2"
   },
   "dependencies": {
-    "browser-sync": "^2.26.7"
+    "browser-sync": "^2.26.7",
+    "gulp-sass": "^4.1.0"
   }
 }
+
