--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   },
   "homepage": "https://github.com/Ekaterina31415/repair-design#readme",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1"
   },
   "dependencies": {
     "browser-sync": "^2.26.7",
     "gulp-sass": "^4.1.0"
   }
 }
-
