--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-autoprefixer": "^7.0.1"
   },
   "dependencies": {
+    "animate.css": "^4.1.0",
     "browser-sync": "^2.26.7",
     "gulp-sass": "^4.1.0"
   }
